{
    "name": "ButtonsInput",
    "maps": [
        {
            "name": "Car",
            "id": "9e8a07ce-3286-460c-a922-673ee15cad78",
            "actions": [
                {
                    "name": "Red_Press",
                    "type": "Button",
                    "id": "58a75380-434a-4261-9303-1a98ad3f1f02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Red_Release",
                    "type": "Button",
                    "id": "e7079715-ddeb-4d26-83f2-07475bd9fa78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Black_Press",
                    "type": "Button",
                    "id": "3cfec8b9-c932-4644-abdf-c194aa26768f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Black_Release",
                    "type": "Button",
                    "id": "fd37b0c0-c7c7-47e1-a8f4-b3067770b237",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Blue",
                    "type": "Button",
                    "id": "44a97298-9b0a-4162-a77e-72b39ebfef0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Blue_Release",
                    "type": "Button",
                    "id": "1588adf3-e9d6-4550-a27f-7790c3269d58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Green",
                    "type": "Button",
                    "id": "a7979ffb-89a6-47fc-9bfa-902a13f62c24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Green-Release",
                    "type": "Button",
                    "id": "35567f03-5175-4709-9d84-fd51ed66a333",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "White",
                    "type": "Button",
                    "id": "4e120b5a-f9a2-41da-b056-2b469348288d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "White_Release",
                    "type": "Button",
                    "id": "ecde083f-9d4f-4d0b-8a62-7db4d94e156c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Yellow",
                    "type": "Button",
                    "id": "0de40ad6-8755-4e97-a432-15287fbfdfa7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Yellow_Release",
                    "type": "Button",
                    "id": "0db4fc1f-abd7-42f6-a3fd-ace5b99fd523",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "5aaf4771-2f8d-4a4e-9f34-9dcceabbadbf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cfbbb2c4-cdec-4705-b2ab-2e54183aba15",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Red_Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b9d2079-320d-45fa-811b-410071897322",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Red_Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1887089f-c32b-43f8-a544-6a2dee1cd9b4",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Black_Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9b8a3e0-8b12-4f20-b4c4-050377a633ad",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Black_Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "203b01a1-ab99-480a-b9e2-5996b065768b",
                    "path": "<Keyboard>/p",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Blue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56f16002-ad0b-491d-b140-be7f922c885c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Blue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc04cf4e-4502-42de-8b7a-ec394033eda5",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Green",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2ad1ce0-efab-4b33-8ced-0254fc8396db",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Green",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec6303a0-06f7-4ca8-9400-141ac12e5628",
                    "path": "<Keyboard>/t",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "White",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b3b8bb0-c200-4c0b-9457-b6dfb98f03a0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "White",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3656bb38-69a4-42c1-9878-ced34fa89d32",
                    "path": "<Keyboard>/u",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Yellow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37d55fe4-5730-46a9-a5a5-0c6ce1031de7",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Yellow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8b53e3a-4039-46af-843c-cde8626b9b1d",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Red_Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e12e1aa-239f-412e-929d-493b5dde602c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Red_Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "068fad42-ff05-4d1f-b842-ec8d7602026a",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Black_Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b672858d-92a9-4d3b-bffc-080fc784a497",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Black_Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9805660f-d683-447c-bea6-badbe5c1cdea",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Blue_Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34cbe871-e828-4442-b4f1-2ad85be07e45",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Green-Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54595542-7c71-4b1f-bb0d-e3f5fc1c1657",
                    "path": "<Keyboard>/o",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "White_Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f328f98-77e2-428c-8c5a-a99d8eaac9c7",
                    "path": "<Keyboard>/i",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Yellow_Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87e16788-7bef-4f43-ba32-6a9d5a45f8d9",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Yellow_Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e84b093d-4f0a-4128-b74e-5ba292d71816",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea0abd57-2f10-488f-9f47-fc887c769eb1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}